--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dropdown Select Demo</title>
+  <!--[if lt IE 9]><script src="bower_components/es5-shim/es5-shim.js"></script><![endif]-->
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
@@ -85,6 +86,7 @@
      }
     .dropdown {
       position: absolute;
+      z-index: 99;
       top: 100%;
       left: 0;
       width: 100%;
